Improve support for comment lines anywhere (code simpler too); updated from deprecated use of primitives in wrapper constructors; added info in parsing exceptions